--- a/content/projects/inpaint.html
+++ b/content/projects/inpaint.html
@@ -1,7 +1,7 @@
 ---
 showonlyimage : false
 draft : false
-image : "img/projects/inpainting.png"
+image : "img/projects/paintinghole.jpg"
 date : "2017-05-30"
 title : "Image Inpainting from Gradient Statistics"
 description : "Fill holes in drawings with a gradient-based maximum likelihood estimator."
@@ -18,15 +18,16 @@ weight : 1
 </ul>
 <p>This project fills holes in drawings according to an exponential distribution based on gradient magnitude and gradient angle. Gradient magnitude tells us how sharply the gray scale colors transition. Pairwise gradient angle represents shapes in the image.</p>
 <p>Given the probability distribution, simulated annealing approximately solves the maximum likelihood estimator. When the hole is small, the inpainting result looks reasonable to human eyes.</p>
-<div class="row">
+<center>
+<div class="row" style="width:80.0%">
 <center>
 <table>
 <tr>
 <td>
-<img src="/img/projects/inpainting_fig1.jpg" width="250">
+<img src="/img/projects/inpainting_fig1.jpg" style="width:100.0%">
 </td>
 <td>
-<img src="/img/projects/inpainting_fig2.jpg" width="250">
+<img src="/img/projects/inpainting_fig2.jpg" style="width:100.0%">
 </td>
 </tr>
 </table>
@@ -35,4 +36,5 @@ Example: Before and after filling the hole.
 <p>
 </p>
 </div>
-<p>However, simulated annealing is not fast enough to handle more than 20 pixels. For future improvement, the exponential model can be seen as a Markov Random Field on the gradient field. There is a well-known optimization algorithm called Max-product Belief Propagation.</p>
+</center>
+<p>Simulated annealing is fast enough to handle around 20 pixels. Beyond that, for future improvement, the exponential model can be seen as a Markov Random Field on the gradient field. There is a well-known optimization algorithm called Max-Product Belief Propagation.</p>
