rewrote descriptions and changed image icons

--- a/content/about/_index.html
+++ b/content/about/_index.html
@@ -5,14 +5,8 @@ title: "About Me"
 
 
 
-<center>
-<img src="/img/self-portrait.png" style="width:50.0%" />
-</center>
-<p><br></p>
-<p>I have always been curious about this world, and I love explorative research.</p>
-<p>I was trained to be a mathematician and computer scientist. While I still enjoy thinking about abstract theory, I’m now more interested in applying research skills to model real-world problems. In the past year, I’ve picked up a lot of data analysis tools and techniques along the way, and I’m excited to keep learning.</p>
+<p>I am a fourth-year undergraduate student at Caltech studying math, computer science, and English.</p>
+<p>Currently, I’m looking for a data scientist position.</p>
+<p>I have always been curious about this world, and I love explorative research. I was trained to be a mathematician and computer scientist. While I still enjoy thinking about abstract theory, I’m now more interested in applying research skills to model real-world problems. Recently, I’ve picked up a lot of data analysis tools and techniques along the way, and I’m excited to keep learning.</p>
+<p>In the past, I’ve worked as a quantitative analyst, math researcher, software engineer, and English-Chinese translator.</p>
 <p>When I’m not doing math, I spend time visiting art museums, painting watercolor, reading modernist fiction, cooking, and volunteering.</p>
-<p>It’s hard to summerize my life on one page, but I tried to put together a timeline of what I’ve done since college academically.</p>
-<center>
-<img src="/img/academic-highlights.png" style="width:100.0%" />
-</center>
