--- a/content/about/_index.html
+++ b/content/about/_index.html
@@ -6,7 +6,5 @@ title: "About Me"
 
 
 <p>I am a fourth-year undergraduate student at Caltech studying math, computer science, and English.</p>
-<p>Currently, I’m looking for a data scientist position.</p>
-<p>I have always been curious about this world, and I love explorative research. I was trained to be a mathematician and computer scientist. While I still enjoy thinking about abstract theory, I’m now more interested in applying research skills to model real-world problems. Recently, I’ve picked up a lot of data analysis tools and techniques along the way, and I’m excited to keep learning.</p>
-<p>In the past, I’ve worked as a quantitative analyst, math researcher, software engineer, and English-Chinese translator.</p>
+<p>I have always been curious about this world, and I love explorative research. In the past, I’ve worked as a quantitative analyst, math/computer science researcher, software engineer, and English-Chinese translator.</p>
 <p>When I’m not doing math, I spend time visiting art museums, painting watercolor, reading modernist fiction, cooking, and volunteering.</p>
